--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
   "type": "magento2-module",
   "require": {
     "magento/framework": "^103.0",
+    "magento/module-backend": "^102.0",
     "yireo/magento2-loki-admin-components": "0.0.*"
   },
   "license": [
