--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "require": {
         "magento/framework": "^103.0",
         "magento/module-backend": "^102.0",
-        "loki/magento2-admin-components": "0.1.*"
+        "loki/magento2-admin-components": "^0.2"
     },
     "license": [
         "OSL-3.0"
