--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "description": "N/A",
     "type": "magento2-module",
     "require": {
+        "loki/magento2-admin-components": "~0.2",
         "magento/framework": "^103.0",
-        "magento/module-backend": "^102.0",
-        "loki/magento2-admin-components": "~0.2"
+        "magento/module-backend": "^102.0"
     },
     "license": [
         "OSL-3.0"
