Update composer keywords

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
             "YireoTraining\\ExampleLokiAdminEavEntityType\\": ""
         }
     },
-    "keywords": []
+    "keywords": [
+        "loki-components",
+        "loki-example"
+    ]
 }
